# backend/src/apiserver/resource/resource_manager.go
@@ -18,9 +18,13 @@ import (
 	"context"
 	"encoding/json"
 	"fmt"
+	"github.com/kubeflow/pipelines/backend/src/v2/metadata"
+	"github.com/kubeflow/pipelines/backend/src/v2/objectstore"
+	"github.com/kubeflow/pipelines/third_party/ml-metadata/go/ml_metadata"
 	"io"
 	"net"
 	"strconv"
+	"time"
 
 	"github.com/cenkalti/backoff"
 	"github.com/golang/glog"
@@ -91,6 +95,7 @@ type ClientManagerInterface interface {
 	KubernetesCoreClient() client.KubernetesCoreInterface
 	SubjectAccessReviewClient() client.SubjectAccessReviewInterface
 	TokenReviewClient() client.TokenReviewInterface
+	MetadataClient() metadata.ClientInterface
 	LogArchive() archive.LogArchiveInterface
 	Time() util.TimeInterface
 	UUID() util.UUIDGeneratorInterface
@@ -116,6 +121,7 @@ type ResourceManager struct {
 	k8sCoreClient             client.KubernetesCoreInterface
 	subjectAccessReviewClient client.SubjectAccessReviewInterface
 	tokenReviewClient         client.TokenReviewInterface
+	metadataClient            metadata.ClientInterface
 	logArchive                archive.LogArchiveInterface
 	time                      util.TimeInterface
 	uuid                      util.UUIDGeneratorInterface
@@ -139,6 +145,7 @@ func NewResourceManager(clientManager ClientManagerInterface, options *ResourceM
 		k8sCoreClient:             clientManager.KubernetesCoreClient(),
 		subjectAccessReviewClient: clientManager.SubjectAccessReviewClient(),
 		tokenReviewClient:         clientManager.TokenReviewClient(),
+		metadataClient:            clientManager.MetadataClient(),
 		logArchive:                clientManager.LogArchive(),
 		time:                      clientManager.Time(),
 		uuid:                      clientManager.UUID(),
@@ -1925,4 +1932,97 @@ func (r *ResourceManager) GetTask(taskId string) (*model.Task, error) {
 		return nil, util.Wrapf(err, "Failed to fetch task %v", taskId)
 	}
 	return task, nil
+}
+
+// GetContexts Fetches Contexts with the given sort/filter options.
+func (r *ResourceManager) GetContexts(ctx context.Context, maxResultSize int32, orderByAscending bool, orderByField, filterQuery, nextPageToken string) ([]*ml_metadata.Context, *string, error) {
+	return r.metadataClient.GetContexts(ctx, maxResultSize, orderByAscending, orderByField, filterQuery, nextPageToken)
+}
+
+// GetArtifacts Fetches Artifacts with the given sort/filter options.
+func (r *ResourceManager) GetArtifacts(ctx context.Context, maxResultSize int32, orderByAscending bool, orderByField, filterQuery, nextPageToken string) ([]*ml_metadata.Artifact, *string, error) {
+	return r.metadataClient.GetArtifacts(ctx, maxResultSize, orderByAscending, orderByField, filterQuery, nextPageToken)
+}
+
+// GetArtifactById Fetches Artifacts with the given artifact ids.
+func (r *ResourceManager) GetArtifactById(ctx context.Context, id []int64) ([]*ml_metadata.Artifact, error) {
+	return r.metadataClient.GetArtifactsByID(ctx, id)
+}
+
+// GetArtifactSessionInfo provides the bucket config that contains a session info for a given Artifact.
+// The bucket config contains information on where the artifact is store within object store.
+// The session info is pulled from the artifact's parent context.
+// TODO: In kfp 2.3 the session info can be retrieved directly from the Artifact custom properties.
+func (r *ResourceManager) GetArtifactSessionInfo(ctx context.Context, artifact *ml_metadata.Artifact) (*objectstore.Config, string, error) {
+	artifactCtx, err := r.metadataClient.GetContextByArtifactID(ctx, artifact.GetId())
+	if err != nil {
+		return nil, "", err
+	}
+
+	// Retrieve Pipeline Root info
+	pipelineRoot := artifactCtx.CustomProperties["pipeline_root"].GetStringValue()
+	if pipelineRoot == "" {
+		return nil, "", fmt.Errorf("Unable to retrieve artifact pipeline_root info via context property.")
+	}
+
+	// Retrieve Session info
+	sessionInfoString := artifactCtx.CustomProperties["bucket_session_info"].GetStringValue()
+	if sessionInfoString == "" {
+		return nil, "", fmt.Errorf("Unable to retrieve artifact session info via context property.")
+	}
+	sessionInfo, err := objectstore.GetSessionInfoFromString(sessionInfoString)
+	if err != nil {
+		return nil, "", err
+	}
+	config, err := objectstore.ParseBucketConfig(pipelineRoot, sessionInfo)
+	if err != nil {
+		return nil, "", err
+	}
+	if artifact.Uri == nil {
+		return nil, "", fmt.Errorf("Artifact did not have a URI property.")
+	}
+
+	// Retrieve namespace
+	namespace := artifactCtx.CustomProperties["namespace"].GetStringValue()
+	if namespace == "" {
+		return nil, "", fmt.Errorf("Unable to retrieve artifact namespace info via context property.")
+	}
+
+	return config, namespace, nil
+}
+
+// GetSecretKeyValue retrieves the value identified by the Secret name and key within the provided namespace.
+func (r *ResourceManager) GetSecretKeyValue(ctx context.Context, ns, name, key string) (string, error) {
+	secret, err := r.k8sCoreClient.SecretClient(ns).Get(ctx, name, v1.GetOptions{})
+	if err != nil {
+		return "", err
+	}
+	return string(secret.Data[key]), nil
+}
+
+// GetSecret retrieves the secret identified by name from the provided namespace.
+func (r *ResourceManager) GetSecret(ctx context.Context, namespace, name string) (*corev1.Secret, error) {
+	secret, err := r.k8sCoreClient.SecretClient(namespace).Get(ctx, name, v1.GetOptions{})
+	if err != nil {
+		return nil, err
+	}
+	return secret, nil
+}
+
+// GetSignedUrl retrieves a signed url for the associated artifact.
+func (r *ResourceManager) GetSignedUrl(bucketConfig *objectstore.Config, secret *corev1.Secret, expirySeconds time.Duration, artifactURI string) (string, error) {
+	signedUrl, err := r.objectStore.GetSignedUrl(bucketConfig, secret, expirySeconds, artifactURI)
+	if err != nil {
+		return "", err
+	}
+	return signedUrl, nil
+}
+
+// GetObjectSize retrieves the size of the Artifact's object in bytes.
+func (r *ResourceManager) GetObjectSize(bucketConfig *objectstore.Config, secret *corev1.Secret, artifactURI string) (int64, error) {
+	size, err := r.objectStore.GetObjectSize(bucketConfig, secret, artifactURI)
+	if err != nil {
+		return 0, err
+	}
+	return size, nil
 }
